--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,18 +17,21 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:id="@+id/textViewQuestion"/>
 
+    <Button
+            android:text="Следующий вопрос"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/buttonNext"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:id="@+id/linearLayout">
         <Button
                 android:text="Да"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/buttonTrue" android:layout_weight="1"/>
-        <Button
-                android:text="Следующий"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/buttonNext"/>
         <Button
                 android:text="Нет"
                 android:layout_width="wrap_content"
