--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,13 @@
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
             app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
+    <Button
+            android:text="Подсмотреть ответ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/buttonPeep" android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/buttonNext" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
